// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemButtons renders NotPurchased when the item is not purchased 1`] = `
<div>
  <div
    class=" float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 btn btn-link"
      data-test-id="not-purchased-item-complete-id1"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <button
      class="p-0 me-3 btn btn-link"
      data-test-id="not-purchased-item-edit-id1"
      type="button"
    >
      <i
        class="fa fa-edit fa-2x text-warning"
      />
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="not-purchased-item-delete-id1"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`ListItemButtons renders Purchased when the item is purchased 1`] = `
<div>
  <div
    class=" float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3  btn btn-link"
      data-test-id="purchased-item-refresh-id1"
      type="button"
    >
      <i
        class="fa fa-redo fa-2x text-primary"
      />
    </button>
    <button
      class="p-0 me-3 btn btn-link"
      data-test-id="purchased-item-edit-id1"
      disabled=""
      type="button"
    >
      <i
        class="fa fa-edit fa-2x text-warning"
      />
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="purchased-item-delete-id1"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;
